--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   }
 }
