--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint", 
+    "build:css": "postcss assets/main.css -o assets/main_browser.css"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -19,6 +20,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.12",
     "typescript": "^4.5.4"
