--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint", 
+    "lint": "next lint",
     "build:css": "postcss assets/main.css -o assets/main_browser.css"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -21,6 +22,8 @@
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.0.2",
+    "postcss-nesting": "^10.1.1",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.12",
     "typescript": "^4.5.4"
